--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/alvyynm/webcrawler/issues"
   },
-  "homepage": "https://github.com/alvyynm/webcrawler#readme"
+  "homepage": "https://github.com/alvyynm/webcrawler#readme",
+  "devDependencies": {
+    "jest": "^29.5.0"
+  }
 }
